<resources>
    <string name="app_name">Example App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Name</string>
    <string name="welcome_name">Bienvenido</string>
    <string name="msg_altadeclases">Alta de Clases</string>
    <string name="msg_nombre_clase">Nombre de clase</string>
    <string name="msg_nombre_clasesPorSemana">Clases por semana</string>
    <string name="msg_horarios">Horarios</string>
    <string name="msg_hora">Hora de Clase</string>
    <string name="title_alumnos">Alumnos</string>
    <string name="verperfil_title">ver perfil</string>
    <string name="miscursos_title">Mis Cursos</string>
    <string name="msg_enviar">Enviar</string>
    <string name="msg_clasestotales">Clases totales</string>
    <string name="msg_alumnos_inscritos">Alumnos Inscritos</string>
    <string name="msg_inscribirse">Inscribirse</string>
</resources>