<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_blue_20"
    tools:context=".ui.AddCourseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView_msg_altaDeClases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/msg_altadeclases"
            android:textColor="@color/form_blue_title"
            android:layout_marginTop="16dp"
            android:textSize="21sp"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/textView_msg_nombreClase"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingStart="8dp"
            android:background="@drawable/roundededform"
            android:hint="@string/msg_nombre_clase"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_msg_altaDeClases"
            app:layout_constraintStart_toStartOf="@+id/textView_msg_altaDeClases"
            app:layout_constraintTop_toBottomOf="@+id/textView_msg_altaDeClases" />

        <EditText
            android:id="@+id/textView_msg_horarios"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundededform"
            android:hint="@string/msg_horarios"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_msg_nombreClase"
            app:layout_constraintStart_toStartOf="@+id/textView_msg_nombreClase"
            app:layout_constraintTop_toBottomOf="@+id/textView_msg_nombreClase" />

        <EditText
            android:id="@+id/textView_msg_hora"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundededform"
            android:paddingStart="8dp"
            android:hint="@string/msg_hora"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_msg_horarios"
            app:layout_constraintStart_toStartOf="@+id/textView_msg_horarios"
            app:layout_constraintTop_toBottomOf="@+id/textView_msg_horarios" />

        <EditText
            android:id="@+id/textView_msg_clasesPorSemana"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundededform"
            android:hint="@string/msg_nombre_clasesPorSemana"
            android:inputType="number"
            android:textSize="20sp"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView_msg_hora"
            app:layout_constraintStart_toStartOf="@+id/textView_msg_hora"
            app:layout_constraintTop_toBottomOf="@+id/textView_msg_hora" />



        <ProgressBar
            android:id="@+id/progress_bar_addcourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="244dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyclview_alumnos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyclview_alumnosRoom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:outlineProvider="bounds"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/btn_enviar"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/msg_enviar"
            android:textColor="@color/white"
            android:background="@drawable/roundededbtnform"
            app:layout_constraintEnd_toEndOf="@+id/textView_msg_clasesPorSemana"
            app:layout_constraintStart_toStartOf="@+id/textView_msg_clasesPorSemana"
            app:layout_constraintTop_toBottomOf="@+id/textView_msg_clasesPorSemana" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.appcompat.widget.LinearLayoutCompat>